Add anim flambeau

--- a/Cour/3.Flambeau.md
+++ b/Cour/3.Flambeau.md
@@ -36,5 +36,19 @@ Indices :
 - "extinguishTorch" pour la méthode appelée à la fin de la combustion.
 - "Désactiver" comme action à effectuer dans extinguishTorch.
 
+# Animation de la Lumière de la Torche 🕯️:
+
+## Crée l'Animation dans Unity 🛠️ 
+Dans Unity, sélectionne ton objet torche contenant la lumière et crée une nouvelle animation. C'est comme donner vie à ta flamme !
+
+## Ajoute les Keyframes 🔑 
+Dans l'éditeur d'animation, anime l'intensité pour qu'elle danse comme au rythme d'une douce mélodie. C'est là que ton AnimationCurve entre en jeu, comme le chef d'orchestre d'un concert de lumière.
+
+## Associe le Script 📜 
+Avec ton animation prête, ton script saura exactement quand illuminer le chemin du joueur. Comme une invitation à suivre la lumière dans l'obscurité !
+
+[FlameAnimations.txt](https://github.com/g404-code-gaming/MysteriesOfEgypt/files/14193684/FlameAnimations.txt)
+
 ## Conclusion 🎉
 Et voilà! En combinant un beau modèle de flambeau, en secouant ton jeu avec un système de particules flamboyant, et en apportant une touche lumineuse, ta torche est prête à éclairer tout chemin sombre et à enrichir l'atmosphère de ton jeu. 
+
