--- a/Cour/1.Mapping.md
+++ b/Cour/1.Mapping.md
@@ -33,4 +33,4 @@ Dans cette partie de notre aventure pédagogique, nous allons explorer ensemble 
 Et voilà pour le mapping des objets de "MysteriesOfEgypt". Chaque objet doit être pensé pour enrichir l'expérience de jeu et plonger le joueur dans une aventure inoubliable au cœur des mystères de l'Égypte.
 Maintenant, nous allons passer au codage de votre personnage ainsi que la gestion des pentes glissantes.
 
-[2.PlayerController]()
+[2.PlayerController](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/2.PlayerController.md)
