--- a/Cour/2.PlayerController.md
+++ b/Cour/2.PlayerController.md
@@ -38,7 +38,7 @@ Dans cet exemple, les "___" doivent être remplacés par les mots ou expressions
 ## Conclusion
 Le Player Controller est le lien entre le joueur et le monde du jeu. Il est essentiel de le rendre aussi réactif et intuitif que possible pour une expérience de jeu immersive. Cet exercice a pour but de vous familiarisez avec les concepts clés du développement de jeu sous Unity, tout en stimulant vos capacités à résoudre des problèmes.
 Ensuite, place a l'interaction des objet avec notre player.
-[InteractionPlayer]()
+[InteractionPlayer](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/3.Flambeau.md)
 
 
 
