--- a/Cour/3.Flambeau.md
+++ b/Cour/3.Flambeau.md
@@ -52,3 +52,4 @@ Avec ton animation prête, ton script saura exactement quand illuminer le chemin
 ## Conclusion 🎉
 Et voilà! En combinant un beau modèle de flambeau, en secouant ton jeu avec un système de particules flamboyant, et en apportant une touche lumineuse, ta torche est prête à éclairer tout chemin sombre et à enrichir l'atmosphère de ton jeu. 
 
+[Interaction](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/4.Interaction.md)
