--- a/Cour/5.DoorWithLever.md
+++ b/Cour/5.DoorWithLever.md
@@ -19,3 +19,5 @@ Dans cette partie du cours, on va plonger dans un élément de gameplay classiqu
  🌍: Pour mettre en œuvre tout ça, place tes objets dans la scène. Assure-toi que le levier et la porte soient bien positionnés et que les animations se jouent comme prévu. Joue la scène pour tester l'interaction et ajuste si nécessaire. (Oublie pas si tu veux interagir avec ton levier, il lui faut un rigidbody ainsi qu'un box collider)
 
  🎮: N'oublie pas d'ajouter une UI pour signaler au joueur quand il peut interagir avec le levier. Ça peut être un simple texte ou une icône qui apparaît à l'écran (Reprenez le inttext de votre UI).
+
+[BONUS: Radio](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/6.Radio.md)
