--- a/Cour/6.Radio.md
+++ b/Cour/6.Radio.md
@@ -16,3 +16,5 @@ Prêt à ajouter un twist sympa à ton projet ? Faisons place à une radio inter
 
 4. Tester et Ajuster ✔️🔧:
  Une fois que ta radio est placée et que le script est prêt, c’est le moment de tester. Vérifie que tout fonctionne à merveille et fais les ajustements nécessaires pour que tu sois à fond sur le rendu final.
+
+[Place au NotePad](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/7.NotePad.md)
