--- a/Cour/7.NotePad.md
+++ b/Cour/7.NotePad.md
@@ -29,3 +29,5 @@ Oublie pas de rajouter un rigidbody et un box collider pour que l'on puisse inte
 # 🎉 Mission Accomplie : Le Notepad Interactif est Né ! 🎉
 
 Et voilà ! Tu viens de franchir une étape majeure en ajoutant une touche personnelle et interactive à ton jeu avec ce notepad. Ce n'était pas juste une session de programmation ordinaire, c'était un véritable voyage dans l'univers de la création. 🌌✨
+
+[AIMonster](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/8.AI%20Monster.md)
