add link 8.AI Monster.md

--- a/Cour/8.AI Monster.md
+++ b/Cour/8.AI Monster.md
@@ -28,3 +28,4 @@ Applique des valeurs par défaut pour démarrer en douceur. 🚦
 Entre dans la valse des états : quand patrouiller, quand poursuivre et quand rester au calme. 💃🕺
 Utilise des conditions et des événements pour dynamiser le gameplay. ⚡
 
+[AttackMonster](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/9.AttackMonster.md)
