Add link 9.AttackMonster.md

--- a/Cour/9.AttackMonster.md
+++ b/Cour/9.AttackMonster.md
@@ -36,3 +36,5 @@ Test : Lance le jeu et teste si l'interaction fonctionne comme prévu. Quand le 
 raître, la caméra de l'attaque s'activer, puis l'animation de jumpscare se déclencher.
 
 Ajustements : Si nécessaire, ajuste la position et la taille du collider, ainsi que les paramètres du script pour peaufiner l'expérience.
+
+[Enigme](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/10.Enigme.md)
