add link 10.Enigme.md

--- a/Cour/10.Enigme.md
+++ b/Cour/10.Enigme.md
@@ -26,4 +26,4 @@ Logique Aléatoire : Développer le code au sein du GameManager qui va sélectio
 
 Intégration : S'assurer que le livre généré aléatoirement est celui que le joueur peut récupérer et placer sur le piédestal pour résoudre l'énigme. 
 
-
+[Menu](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/11.Menu.md)
