add links 11.Menu.md

--- a/Cour/11.Menu.md
+++ b/Cour/11.Menu.md
@@ -22,3 +22,5 @@ Le bouton "Options" peut ouvrir un nouveau panneau où les joueurs ajustent leur
 
 ## ❌ Bouton Quit:
 Le bouton "Quit" permet aux joueurs de quitter le jeu. La mise en place suit le même principe que pour le bouton "Start", mais la fonction appelée sera QuitGame() comme vu dans l'exemple de script. 
+
+[Settings](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/12.Setting.md)
