add links 12.Setting.md

--- a/Cour/12.Setting.md
+++ b/Cour/12.Setting.md
@@ -22,3 +22,4 @@ En rendant ces options dynamiques, tu t'assures que ton jeu peut s'adapter à to
 
 Comment Implementer ? Utilise des éléments UI dans Unity pour créer des curseurs pour le volume, des listes déroulantes pour la résolution, et assure-toi de tester sur différentes configurations pour valider que ces réglages fonctionnent comme prévu.
 
+[Cinématique](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/13.CinématiqueEnd.md)
