add link 13.CinématiqueEnd.md

--- a/Cour/13.CinématiqueEnd.md
+++ b/Cour/13.CinématiqueEnd.md
@@ -19,3 +19,5 @@
 
 ## Test et Ajustements Finaux ✔️
 Mets à l'épreuve ta cinématique pour s'assurer qu'elle se lance sans accroc. 
+
+[Audio](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/14.%20Audio.md)
