--- a/Cour/2.PlayerController.md
+++ b/Cour/2.PlayerController.md
@@ -30,7 +30,8 @@ Finalement, assure-toi que la scène est prête à recevoir le script FpsControl
 ## Implémentation du FpsController
 Le FpsController est le composant qui permettra à nos explorateurs de naviguer avec agilité dans les dédales de notre jeu. Voici un exemple simplifié que tu pourras ajuster selon les besoins spécifiques de "MysteriesOfEgypt". 
 
-(Telecharge le fichier et complète le code)  [code.txt](https://github.com/g404-code-gaming/MysteriesOfEgypt/files/14109015/code.txt)
+(Telecharge le fichier et complète le code)  [FpsController.txt](https://github.com/user-attachments/files/18333971/FpsController.txt)
+
 
 
 Dans cet exemple, les "___" doivent être remplacés par les mots ou expressions appropriés. Nous avons laissé des indices sous forme de commentaires pour guider vos élèves dans cette démarche. Le but est de leur permettre de comprendre le fonctionnement interne d'un Player Controller tout en les incitant à réfléchir et à appliquer leurs connaissances.
@@ -39,6 +40,7 @@ Dans cet exemple, les "___" doivent être remplacés par les mots ou expressions
 Le Player Controller est le lien entre le joueur et le monde du jeu. Il est essentiel de le rendre aussi réactif et intuitif que possible pour une expérience de jeu immersive. Cet exercice a pour but de vous familiarisez avec les concepts clés du développement de jeu sous Unity, tout en stimulant vos capacités à résoudre des problèmes.
 Ensuite, place a l'interaction des objet avec notre player.
 [InteractionPlayer](https://github.com/g404-code-gaming/MysteriesOfEgypt/blob/main/Cour/3.Flambeau.md)
+
 
 
 
